--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           push: true
-          tags: tpblhb/infra_actions:v1
+          tags: tpblhb/infra_actions:latest
 
   deploy:
     runs-on: ubuntu-latest
